yaml_files/ymldir/pod-test.yml
apiVersion: v1
kind: Pod
metadata:
    name: pod-test
spec:
    containers:
        - name: bscontainer
          image: lol
          imagePullPolicy: Never
