yaml_files/ymldir/service-server.yml
apiVersion: v1
kind: Service
metadata:
    name: server-service
spec:
  selector:
    app: nginx
  ports:
      - protocol: TCP
        port: 80
        targetPort: 80
